--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Football shoes</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css" />
 </head>
 
 <body>
@@ -14,42 +14,40 @@
             <h1>SSooSS</h1>
         </div>
         <ul class="nav">
-            <li><a href="/">Home</a></li>
-            <li><a href="">About</a></li>
-            <li><a href="">Products</a></li>
-            <li id='sc'><a href=""><i class="fas fa-shopping-cart"></i>cart<span>0</span></a></li>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="about.html">About</a></li>
+            <li><a href="index.html">Products</a></li>
+            <li id="sc">
+                <a href="cart.html"><i class="fas fa-shopping-cart"></i>cart<span>0</span></a>
+            </li>
         </ul>
     </header>
 
     <div class="container">
         <div class="product">
-            <img src="./img/jr-phantom-vision-2-academy-dynamic-fit-mg-little-big-kids-multi-ground-soccer-cleat-wSJNHf.jpg"
-                alt="">
+            <img src="./img/Nike A11.jpg" alt="" />
             <h3>Nike Soccer Shoes A11</h3>
             <h3>$2000</h3>
             <a href="#" class="add-cart">Add cart</a>
         </div>
         <div class="product">
-            <img src="./img/mercurial-vapor-13-pro-tf-artificial-turf-soccer-shoe-sfsWtp.jpg" alt="">
+            <img src="./img/Puma A12.jpg" alt="" />
             <h3>Puma Soccer Shoes A12</h3>
             <h3>$1000</h3>
             <a href="#" class="add-cart">Add cart</a>
         </div>
         <div class="product">
-            <img src="./img/jr-phantom-vision-2-academy-dynamic-fit-mg-little-big-kids-multi-ground-soccer-cleat-wSJNHf.jpg"
-                alt="">
-            <h3>AdidasSoccer Shoes A13</h3>
-            <h3>$2500</h3>
-            <a href="#" class="add-cart">Add cart</a>
-        </div>
-        <div class="product">
-            <img src="./img/phantom-vision-pro-dynamic-fit-fg-firm-ground-soccer-cleat-rxZMtr.jpg" alt="">
+            <img src="./img/Nike A14.jpg" alt="" />
             <h3>Nike Soccer Shoes A14</h3>
             <h3>$3000</h3>
             <a href="#" class="add-cart">Add cart</a>
         </div>
-
-
+        <div class="product">
+            <img src="./img/Nike A15.jpg" alt="" />
+            <h3>Nike Soccer Shoes A15</h3>
+            <h3>$3000</h3>
+            <a href="#" class="add-cart">Add cart</a>
+        </div>
     </div>
 
     <script src="index.js"></script>
